--- a/maininterface.html
+++ b/maininterface.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="eng">
-
+<title>MMU ECAL | MAIN</title>
 <head>
     <h1><b>LOG IN</b></h1>
 </head>
+<body>
+    
+</body>
 </html>
