--- a/maininterface.html
+++ b/maininterface.html
@@ -3,6 +3,7 @@
 <title>MMU ECAL | MAIN</title>
 <head>
     <h1><b>LOG IN</b></h1>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 </body>
 </html>
