--- a/maininterface.html
+++ b/maininterface.html
@@ -5,5 +5,13 @@
     <h1><b>LOG IN</b></h1>
     <link rel="stylesheet" href="style.css"/>
 </head>
+<body>
+    <form method="POST" autocomplete="off">
+    <label for="ID" class="ID_form">ID:</label>
+     <input type="ID" name="ID">
+     <input type="submit">
+     <section class="header">
+
+     </section>
 </body>
 </html>
