--- a/maininterface.html
+++ b/maininterface.html
@@ -11,6 +11,9 @@
      <input type="ID" name="ID">
      <input type="submit">
      <section class="header">
+        <nav>
+            <a href="maininterface.html"><img src="images/logo.png"></a>
+        </nav>
 
      </section>
 </body>
