--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
       rel="stylesheet"/>
-    <link rel="stylesheet" href="style_main.css" />
+    <link rel="stylesheet" href="style_home.css" />
     <title>MMU E-CAL | HOME</title>
   </head>
   <body>
@@ -38,8 +38,8 @@
       </div>
       <div class="container__right">
         <div class="images">
-          <img src="assets/food1.jpg" alt="tent-1" class="food-1" />
-          <img src="assets/food2.jpg" alt="tent-2" class="food-2" />
+          <img src="assets/food1.jpg" alt="food-1" class="food-1" />
+          <img src="assets/food2.jpg" alt="food-2" class="food-2" />
         </div>
         <div class="content">
           <h4>Great Food | Great Life</h4>
