--- a/homepage.html
+++ b/homepage.html
@@ -26,7 +26,7 @@
         <li><a href="#">STEP COUNTER</a></li>
       </ul>
       <div class="nav__btns">
-        <button class="btn"><i class="ri-expand-left-line"></i></button>
+        <button class="btn"><i class="ri-expand-right-line"></i></button>
       </div>
     </nav>
     <div class="container">
